--- a/home.html
+++ b/home.html
@@ -100,6 +100,7 @@
         </div>
       </div>
       <div class="line"></div>
+      <h2 class="title_date_time">Select a Date & Time</h2>
       <div class="scheduler-container">
         <div class="calendar-container">
           <div id="calendar"></div>
