addet: timeslots-container

--- a/home.html
+++ b/home.html
@@ -106,7 +106,7 @@
           <div id="calendar"></div>
         </div>
         <div class="timeslots-container">
-          <h3 class="title-time">Выберите время</h3>
+          <h3 class="title-time"></h3>
           <ul class="timeslot-list" id="timeslotList"></ul>
         </div>
       </div>
