addet: timeslot__btn-time and next

--- a/home.html
+++ b/home.html
@@ -12,6 +12,7 @@
   <body>
     <div class="container">
       <div class="content__box">
+        <a href="/?utm_campaign=sign_up&amp;utm_medium=badge&amp;utm_source=invitee" target="_blank" class="VJL48qbQzWENTFAh1Knk e9TS9yoMqqIN2PqBo1QG _i6SG2jlTfccH2ZZblil"><div data-id="branding" class="jWSwi_R_Xl7kPjUhuQoo _igrKj_5lj_5nWQu8DPw"><div class="V7YfvNqWv0XKYKys7N7K __d5yUqDgBEjoX7J2dql">powered by</div><div class="HvybhIo63ZbBJxHh7Ann RK3ps09FjZwzHTaYDakl">Calendly</div></div></a>
         <a aria-label="Go to previous page" class="" href="/fabric_vc"
           ><span class=""></span
         ></a>
@@ -107,7 +108,47 @@
         </div>
         <div class="timeslots-container">
           <h3 class="title-time"></h3>
-          <ul class="timeslot-list" id="timeslotList"></ul>
+          <div class="timeslot-list" id="timeslotList">
+            <div class="timeslot-box">
+              <button class="timeslot__btn-time">09:00</button>
+            </div>
+            <div class="timeslot-box">
+              <button class="timeslot__btn-time">09:30</button>
+            </div>
+            <div class="timeslot-box">
+              <button class="timeslot__btn-time">10:00</button>
+            </div>
+            <div class="timeslot-box">
+              <button class="timeslot__btn-time">10:30</button>
+            </div>
+            <div class="timeslot-box">
+              <button class="timeslot__btn-time">11:00</button>
+            </div>
+            <div class="timeslot-box">
+              <button class="timeslot__btn-time">11:30</button>
+            </div>
+            <div class="timeslot-box">
+              <button class="timeslot__btn-time">12:00</button>
+            </div>
+            <div class="timeslot-box">
+              <button class="timeslot__btn-time">12:30</button>
+            </div>
+            <div class="timeslot-box">
+              <button class="timeslot__btn-time">13:00</button>
+            </div>
+            <div class="timeslot-box">
+              <button class="timeslot__btn-time">13:30</button>
+            </div>
+            <div class="timeslot-box">
+              <button class="timeslot__btn-time">14:00</button>
+            </div>
+            <div class="timeslot-box">
+              <button class="timeslot__btn-time">14:30</button>
+            </div>
+            <div class="timeslot-box">
+              <button class="timeslot__btn-time">15:00</button>
+            </div>
+          </div>
         </div>
       </div>
     </div>
