--- a/home.html
+++ b/home.html
@@ -12,18 +12,18 @@
   <body>
     <div class="container">
       <div class="content__box">
-        <a href="/?utm_campaign=sign_up&amp;utm_medium=badge&amp;utm_source=invitee" target="_blank" class="VJL48qbQzWENTFAh1Knk e9TS9yoMqqIN2PqBo1QG _i6SG2jlTfccH2ZZblil"><div data-id="branding" class="jWSwi_R_Xl7kPjUhuQoo _igrKj_5lj_5nWQu8DPw"><div class="V7YfvNqWv0XKYKys7N7K __d5yUqDgBEjoX7J2dql">powered by</div><div class="HvybhIo63ZbBJxHh7Ann RK3ps09FjZwzHTaYDakl">Calendly</div></div></a>
+        <!-- <a href="/?utm_campaign=sign_up&amp;utm_medium=badge&amp;utm_source=invitee" target="_blank" class="VJL48qbQzWENTFAh1Knk e9TS9yoMqqIN2PqBo1QG _i6SG2jlTfccH2ZZblil"><div data-id="branding" class="jWSwi_R_Xl7kPjUhuQoo _igrKj_5lj_5nWQu8DPw"><div class="V7YfvNqWv0XKYKys7N7K __d5yUqDgBEjoX7J2dql">powered by</div><div class="HvybhIo63ZbBJxHh7Ann RK3ps09FjZwzHTaYDakl">Calendly</div></div></a>
         <a aria-label="Go to previous page" class="" href="/fabric_vc"
           ><span class=""></span
-        ></a>
+        ></a> -->
         <div class="content__title-top">
           <img
             src="https://d3v0px0pttie1i.cloudfront.net/uploads/user/avatar/33193801/b8073616.jpg"
             alt="Fabric VC"
             class="logo"
           />
-          <div data-component="name" class="logo__name">Fabric VC</div>
-          <h1 class="calendar_title">45 Minute Meeting</h1>
+          <div data-component="name" class="logo__name">Ткань ВК</div>
+          <h1 class="calendar_title">45-минутная встреча</h1>
         </div>
         <div class="block-content-icons">
           <div data-container="details" class="block-content-icons">
@@ -55,7 +55,7 @@
                   </span>
                 </div>
               </div>
-              <span>45 min</span>
+              <span>45 мин.</span>
             </div>
             <div data-component="event-type-location" class="">
               <div class="flex">
@@ -93,15 +93,15 @@
           <div class="">
             <div class="">
               <p class="desc__join">
-                Join the room ID: X-9348rfh45hg788 at
-                <a href="https://x-call.app" target="_blank">x-call.app</a>
+                Присоединяйтесь к комнате с идентификатором: X-9348rfh45hg788 по адресу
+                <!-- <a href="https://x-call.app" target="_blank">x-call.app</a> -->
               </p>
             </div>
           </div>
         </div>
       </div>
       <div class="line"></div>
-      <h2 class="title_date_time">Select a Date & Time</h2>
+      <h2 class="title_date_time">Выберите дату и время</h2>
       <div class="scheduler-container">
         <div class="calendar-container">
           <div id="calendar"></div>
