--- a/home.html
+++ b/home.html
@@ -6,22 +6,27 @@
     <link href="./style.css" rel="stylesheet" />
     <link
       href="https://unpkg.com/fullcalendar@5/main.min.css"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
   </head>
   <body>
     <div class="container">
       <div class="content__box">
-        <a href="/?utm_campaign=sign_up&amp;utm_medium=badge&amp;utm_source=invitee" target="_blank" class="VJL48qbQzWENTFAh1Knk e9TS9yoMqqIN2PqBo1QG _i6SG2jlTfccH2ZZblil"><div data-id="branding" class="jWSwi_R_Xl7kPjUhuQoo _igrKj_5lj_5nWQu8DPw"><div class="V7YfvNqWv0XKYKys7N7K __d5yUqDgBEjoX7J2dql">powered by</div><div class="HvybhIo63ZbBJxHh7Ann RK3ps09FjZwzHTaYDakl">Calendly</div></div></a>
-        <a aria-label="Go to previous page" class="" href="/fabric_vc"
-          ><span class=""></span
-        ></a>
+        <a
+          href="/?utm_campaign=sign_up&amp;utm_medium=badge&amp;utm_source=invitee"
+          target="_blank"
+          class="VJL48qbQzWENTFAh1Knk e9TS9yoMqqIN2PqBo1QG _i6SG2jlTfccH2ZZblil"><div
+            data-id="branding"
+            class="jWSwi_R_Xl7kPjUhuQoo _igrKj_5lj_5nWQu8DPw"><div
+              class="V7YfvNqWv0XKYKys7N7K __d5yUqDgBEjoX7J2dql">powered
+              by</div><div
+              class="HvybhIo63ZbBJxHh7Ann RK3ps09FjZwzHTaYDakl">Calendly</div></div></a>
+        <a aria-label="Go to previous page" class href="/fabric_vc"><span
+            class></span></a>
         <div class="content__title-top">
           <img
             src="https://d3v0px0pttie1i.cloudfront.net/uploads/user/avatar/33193801/b8073616.jpg"
             alt="Fabric VC"
-            class="logo"
-          />
+            class="logo" />
           <div data-component="name" class="logo__name">Fabric VC</div>
           <h1 class="calendar_title">45 Minute Meeting</h1>
         </div>
@@ -29,57 +34,49 @@
           <div data-container="details" class="block-content-icons">
             <div class="flex">
               <div class="icons__box">
-                <div class="">
-                  <span aria-hidden="true" class="time__icons"
-                    ><svg
+                <div class>
+                  <span aria-hidden="true" class="time__icons"><svg
                       data-id="details-item-icon"
                       viewBox="0 0 10 10"
                       xmlns="http://www.w3.org/2000/svg"
-                      role="img"
-                    >
+                      role="img">
                       <path
                         d="M.5 5a4.5 4.5 0 1 0 9 0 4.5 4.5 0 1 0-9 0Z"
                         fill="none"
                         stroke="currentColor"
                         stroke-linecap="round"
-                        stroke-linejoin="round"
-                      ></path>
+                        stroke-linejoin="round"></path>
                       <path
                         d="M5 3.269V5l1.759 2.052"
                         fill="none"
                         stroke="currentColor"
                         stroke-linecap="round"
-                        stroke-linejoin="round"
-                      ></path>
+                        stroke-linejoin="round"></path>
                     </svg>
                   </span>
                 </div>
               </div>
               <span>45 min</span>
             </div>
-            <div data-component="event-type-location" class="">
+            <div data-component="event-type-location" class>
               <div class="flex">
                 <div class="icons__box">
                   <div class="time__icons">
-                    <span aria-hidden="true" class=""
-                      ><svg
+                    <span aria-hidden="true" class><svg
                         data-testid="location-marker-icon"
                         data-id="details-item-icon"
                         xmlns="http://www.w3.org/2000/svg"
                         fill="none"
                         viewBox="0 0 10 10"
-                        role="img"
-                      >
+                        role="img">
                         <path
                           stroke="currentColor"
                           stroke-linecap="round"
                           stroke-linejoin="round"
-                          d="M8 3.5c0 2.5-3 6-3 6S2 6 2 3.5a3 3 0 1 1 6 0v0Z"
-                        ></path>
+                          d="M8 3.5c0 2.5-3 6-3 6S2 6 2 3.5a3 3 0 1 1 6 0v0Z"></path>
                         <path
                           stroke="currentColor"
-                          d="M5 4a.5.5 0 0 1 0-1M5 4a.5.5 0 0 0 0-1"
-                        ></path>
+                          d="M5 4a.5.5 0 0 1 0-1M5 4a.5.5 0 0 0 0-1"></path>
                       </svg>
                     </span>
                   </div>
@@ -90,8 +87,8 @@
           </div>
         </div>
         <div>
-          <div class="">
-            <div class="">
+          <div class>
+            <div class>
               <p class="desc__join">
                 Join the room ID: X-9348rfh45hg788 at
                 <a href="https://x-call.app" target="_blank">x-call.app</a>
