--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Планировщик встреч</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./basic.css">
     <link href="./style.css" rel="stylesheet" />
     <link
@@ -22,7 +23,7 @@
             alt="Fabric VC"
             class="logo"
           />
-          <div data-component="name" class="logo__name">Ткань ВК</div>
+          <div data-component="name" class="logo__name">ВК</div>
           <h1 class="calendar_title">45-минутная встреча</h1>
         </div>
         <div class="block-content-icons">
