--- a/email.html
+++ b/email.html
@@ -36,7 +36,7 @@
             alt="Fabric VC"
             class="logo"
           />
-          <div data-component="name" class="logo__name">Ткань ВК</div>
+          <div data-component="name" class="logo__name">ВК</div>
           <h1 class="calendar_title">45-минутная встреча</h1>
         </div>
         <div class="block-content-icons">
